# RubiksCube

./: .gitignore  CMakeLists.txt  ubuntu_install
data/: quad_frag.glsl  quad_vert.glsl
src/: Quad.cpp  Quad.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Window.cpp  Window.hpp  main.cpp  utils.cpp  utils.hpp  vector_math.cpp  vector_math.hpp
